Deep rewrite G1 GC document based on HotSpot source (170 → 1101 lines)
- Region types: G1HeapRegionType bit encoding from source
- GC cycle: Young GC phases from GCParPhases enum, concurrent
  marking 7-phase cycle, Mixed GC collection set selection
- Remembered Sets: G1CardSet multi-level container hierarchy
  with exact ContainerPtr encodings from g1CardSet.hpp
- SATB: three-color marking, pre-write barrier implementation
- JEP evolution: 344/345/346/423/475/522 with source references
- JEP 522 dual card table: _refinement_table, ClaimTable
- Tuning: all parameters with defaults, 3 scenario configs
- G1 vs ZGC vs Shenandoah: 16-dimension comparison
- Diagnostics: -Xlog tags, GC log interpretation, JFR events
- Source navigation: 20-entry file→purpose mapping table

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>